--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,3 @@
- /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-#map {
-  height: 100vh;
-}
-/* Optional: Makes the sample page fill the window. */
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 .main-form{
   display: inline;
 }
@@ -23,4 +11,8 @@ html, body {
   margin-top: 25%;
   display:flex;
   justify-content: center;
+}
+
+.outermost-div{
+  padding-top:20px;
 }
