--- a/public/style.css
+++ b/public/style.css
@@ -9,14 +9,12 @@
   font-size: 10px;
 }
 
-#homebase-title{
-  display: inline-block;
-}
-
-#dropins-title {
-  display: inline-block;
-}
-
 img#homebase{
-  white-space: nowrap;
+  display:flex;
+  align-self:center
+}
+
+#shelter-info-container{
+  display:flex;
+  flex-wrap: nowrap
 }
